--- a/style.css
+++ b/style.css
@@ -1,32 +1,37 @@
-body{
-    background-size: cover;
+.heading {
+    width: 100%;
+    text-align: left;
 }
 
-.heading{
-    font-size: 23px;
+.heading h3 {
+    display: inline;
+}
+
+.heading button {
+    float: right;
+    border: 1px solid white;
+}
+
+.big_image {
     width: 100%;
+}
+
+#start,
+#status {
+    font-size: 22px;
+}
+
+h4 {
+    background-color: #f5f5f5;
+    line-height: 2;
     margin: 0px;
 }
 
-#start , #number_of_objects
-{
-font-size: 18px;
+.modal-dialog {
+    width: 20;
 }
 
-canvas
-{
-border:2px solid white;
-border-radius: 10px;
-margin-top: 130px;
-box-shadow: 5px 5px 5px white;
+.instruction_image {
+    display: inline-block;
+    width: 45%;
 }
-
-.copy_right_footer {
-    position: fixed;
-    color: #f5f5f5;
-    bottom: 0;
-    width: 100%;
-    background-color: #6c757d;
-    line-height: 2;
-    text-align: center;
- }
